P2/Arrays/03/var/archive/xmlreports/0/0/1/000039
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="39" judge-id="13" status="CE" scoring="ACM" run-tests="0" contest-id="203" compile-error="yes" >
  <uuid>a320b2ab-4369-4649-8f20-d0e2ee31b36a</uuid>
  <compiler_output>000039.cpp:22:3: error: use of undeclared identifier 'system'
         system(&quot;pause&quot;);
         ^
000039.cpp:10:11: warning: expression result unused [-Wunused-value]
        cin &gt;&gt; n,x;
                 ^
1 warning and 1 error generated.
</compiler_output>
</testing-report>
